# Postie

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
Libraries/: CMakeLists.txt
Libraries/Base/: CMakeLists.txt  FixedString.cppm  TypeList.cppm
Libraries/Message/: CMakeLists.txt  Message.cppm  MessageType.cppm
Libraries/Message/Models/: Field.cppm  FieldMessage.cppm  FieldSet.cppm  Message.cppm  MessageSet.cppm
docs/: Doxyfile
libs/: CMakeLists.txt
libs/message-set/: CMakeLists.txt
libs/message-set/include/Postie/Models/: Field.hpp  FieldSet.hpp  MapMessage.hpp  Message.hpp  MessageSet.hpp  Models.hpp  ObjectField.hpp
libs/message-set/include/Postie/Models/Detail/: AreUniqueFields.hpp  AreUniqueMessages.hpp
libs/message-set/src/: CMakeLists.txt
libs/message-set/tests/src/: CMakeLists.txt  main.cpp
libs/message-set/tests/src/Postie/Models/: Field.Test.cpp  FieldSet.Test.cpp  MapMessage.Test.cpp  Message.Test.cpp  MessageSet.Test.cpp  ObjectField.Test.cpp
tools/cmake/: Config.cmake.in
